feat(search): Allow multiple search terms in UnifiedController
