# core/openapi.json
@@ -4014,15 +4014,6 @@
                 ],
                 "parameters": [
                     {
-                        "name": "term",
-                        "in": "query",
-                        "description": "Term to search",
-                        "schema": {
-                            "type": "string",
-                            "default": ""
-                        }
-                    },
-                    {
                         "name": "sortOrder",
                         "in": "query",
                         "description": "Order of entries",
